MovieRecommender/wwwroot/css/site.css
html {
  font-size: 14px;
}

@media (min-width: 768px) {
  html {
    font-size: 16px;
  }
}

html {
  position: relative;
  min-height: 100%;
}

.content-container {
    display: flex;
    align-content: center;
    justify-content: center;
}

body {
    /*text-align: center;*/
    margin-bottom: 60px;
}

body::before {
    content: "";
    background: url("../img/gr-stocks-q8P8YoR6erg-unsplash.jpg") repeat-y;
    background-size: cover;
    position: absolute;
    top: 0px;
    right: 0px;
    bottom: 0px;
    left: 0px;
    opacity: 1.0;
}

.homepage-card {
    background-color: #f8f9fa;
}

.homepage-card:hover {
    background-color: #007bff;
    color: white;
}

.poster-box {
    width: 6rem;
    height: 100%;
}

.poster-box img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.btn-recommend:hover {
    background-color: #007bff;
    border-color: #007bff;
}

.detail-page-actor-image {
    border-radius: 50%;
    aspect-ratio: 1;
}

